[MFLP-53] feat: add update item quantity in cart API